@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-24T01:44:43Z",
-  "count" : 3,
+  "timestamp" : "2022-09-06T01:55:19Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
