@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-05T16:21:57Z",
+  "timestamp" : "2022-09-06T01:55:19Z",
   "count_outdated" : 321,
   "uniques_outdated" : 167,
-  "count" : 339,
+  "count" : 338,
   "uniques" : 178,
   "clones" : [
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
