@@ -1,10 +1,10 @@
 {
-  "count": 18,
+  "count": 17,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
