@@ -1,3 +1,11 @@
+2022-09-06T01:55:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2997031661
+* notice: last 14d: unq all: 2 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 167 321 / 178 339
+* notice: next accum: outdated-unq outdated-all / unq all: 167 321 / 178 338
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-08-23]
+
 2022-09-05T16:21:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994761334
 * notice: last 14d: unq all: 2 18
